# xlcrf

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.cfg  streamlit.py  tasks.py
examples/: blank_template.xlsx  esempio1.xlsx  esempio2.xlsx  example1.xlsx  example2.xlsx  wrong1.xlsx
src/xlcrf/: CRF.py
src/xlcrf.egg-info/: PKG-INFO  SOURCES.txt
src/xlcrf/xlcrf.egg-info/: SOURCES.txt
structs/: example1.xlsx
xlcrf/: script.py
