[tool.poetry]
name = "xlcrf"
version = "0.1.0"
description = ""
authors = ["Luca Braglia <lbraglia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.4"
XlsxWriter = "3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
